--- a/styles/Canvas.module.css
+++ b/styles/Canvas.module.css
@@ -1,7 +1,8 @@
 #canvas{
     position: absolute;
-    border: 1px solid blue;
+    top: 0;
     width: 100%;
     height: 94vh;
     z-index: -1;
+    border-bottom: 1px solid #d7d7d7;
 }
