--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,22 +1,26 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-
 .main {
-  padding: 5rem 0;
+  padding-top: 20vh;
+  z-index: 100;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.bio{
+  position: relative;
+}
 
 .footer {
+  position: sticky;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
