--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -36,6 +36,41 @@
     font-size: 1.25rem;
     line-height: 1.5;
   }
+  .buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 100%;
+  }
+  .gitButton{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 1.5em;
+    background-color:  transparent;
+    padding: 5px;
+    border: 2px solid black; 
+    border-radius: 10px;
+    width: fit-content;
+    cursor: pointer;
+  }
+  .gitButton:hover .gitIcon {
+    background-color: black;
+    color: white;
+  }
+  .gitButton:hover h4 {
+    background-color: black;
+    color: white;
+  }
+  .gitButton:hover {
+    background-color: black;
+    color: white;
+  }
+  .gitButton h4{
+    padding-left: 3px;
+  }
+
 
   @media (max-width: 600px) {
     .grid {
