updated Technology component

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -54,6 +54,7 @@
     border-radius: 10px;
     width: fit-content;
     cursor: pointer;
+    color:black;
   }
   .gitButton:hover .gitIcon {
     background-color: black;
