--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,9 @@
   justify-content: center;
   align-items: center;
 }
+
 .main {
+  width: 100%;
   padding-top: 20vh;
   z-index: 100;
   flex: 1;
@@ -15,10 +17,16 @@
   justify-content: center;
   align-items: center;
 }
-.bio{
+.bioContainer{
   position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-
+.bio{
+  width: 50%;
+}
 .footer {
   position: sticky;
   width: 100%;
