--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,7 @@
   align-items: center;
 }
 .bioContainer{
+  width: 80%;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -87,3 +88,9 @@
   height: 1em;
 }
 
+@media only screen and (max-width: 500px){
+  .bioContainer{
+    flex-direction: column;
+    width: 100%;
+  }
+}
