--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,16 +17,11 @@
   justify-content: center;
   align-items: center;
 }
-.bioContainer{
-  width: 80%;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+.projectDiv{
+  min-height: 74vh;
 }
-.bio{
-  width: 50%;
+.downArrow{
+  margin-bottom: 20px;
 }
 .footer {
   position: sticky;
@@ -48,49 +43,12 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
 
 .logo {
   height: 1em;
 }
 
 @media only screen and (max-width: 500px){
-  .bioContainer{
-    flex-direction: column;
-    width: 100%;
-  }
+
+  
 }
