--- a/styles/Technology.module.css
+++ b/styles/Technology.module.css
@@ -4,5 +4,5 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    border: 1px solid blue;
+    padding: 8px 0px;
 }
