--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -29,6 +29,7 @@
     background: #fafafa;
     border-radius: 5px;
     padding: 0.75rem;
+    align-self: center;
     font-size: 1.1rem;
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
       Bitstream Vera Sans Mono, Courier New, monospace;
