updated styling and included test links in project modal

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -23,7 +23,7 @@
   .card:active {
     color: #0070f3;
     border-color: #0070f3;
-    cursor: default;
+    cursor: pointer;
   }
   
   .card h3 {
