--- a/styles/Intro.module.css
+++ b/styles/Intro.module.css
@@ -25,13 +25,50 @@
     font-size: 1.5rem;
   }
   
-  .code {
+.code {
     background: #fafafa;
     border-radius: 5px;
     padding: 0.75rem;
     align-self: center;
     font-size: 1.1rem;
+    color: blue;
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
       Bitstream Vera Sans Mono, Courier New, monospace;
   }
+.one {
+    opacity: 0;
+    -webkit-animation: dot 1.3s infinite;
+    -webkit-animation-delay: 0.0s;
+    animation: dot 1.3s infinite;
+    animation-delay: 0.0s;
+  }
+
+.two {
+      opacity: 0;
+      -webkit-animation: dot 1.3s infinite;
+      -webkit-animation-delay: 0.2s;
+        animation: dot 1.3s infinite;
+        animation-delay: 0.2s;
+  }
+
+.three {
+      opacity: 0;
+      -webkit-animation: dot 1.3s infinite;
+      -webkit-animation-delay: 0.3s;
+      animation: dot 1.3s infinite;
+      animation-delay: 0.3s;
+  }
+
+  @-webkit-keyframes dot {
+        0% { opacity: 0; }
+      50% { opacity: 0; }
+      100% { opacity: 1; }
+  }
+
+  @keyframes dot {
+        0% { opacity: 0; }
+      50% { opacity: 0; }
+      100% { opacity: 1; }
+  }
+
   
