--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,6 +27,7 @@
 }
 .downArrow{
   margin-bottom: 20px;
+  cursor: pointer;
 }
 .footer {
   position: sticky;
@@ -54,7 +55,7 @@
 }
 
 @media only screen and (max-width: 500px){
-.projectDiv{
-}
+/* .projectDiv{
+} */
   
 }
