--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
 }
 
 .main {
-  width: 100%;
+  max-width: 1200px;
   padding-top: 20vh;
   z-index: 100;
   flex: 1;
@@ -18,6 +18,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+background-color: white;
 }
 .projectDiv{
   display: flex;
