--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,6 +19,7 @@
   justify-content: center;
   align-items: center;
 background-color: white;
+box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 }
 .projectDiv{
   display: flex;
@@ -35,6 +36,15 @@ background-color: white;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, #9dbebb,#468189);
+}
+.footerMain{
+  min-width: 1200px; 
+  background-color: #fff;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
