--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,9 +60,43 @@ position: relative;
 .logo {
   height: 1em;
 }
+.socials{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 100;
+  position: -webkit-sticky;
+  position: sticky;
+  justify-content: flex-start;
+  align-items: flex-end;
+  height: 0;
+  margin-right: 5rem;
+  top: 1rem;
+}
+.socialIconContainers{
+  margin-bottom: .5rem; 
+  width: fit-content; 
+  border-radius: 100%; 
+  padding: .5rem; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  height: fit-content; 
+  background-color: #4C4E52; 
+}
+.socialIcons{
+color: white;
+}
+.socialIconContainers:hover{
+  background: linear-gradient(45deg, #9dbebb,#468189);
+}
+.socialIcons:hover{
+
+}
 
 @media only screen and (max-width: 500px){
-/* .projectDiv{
-} */
+.socialIcons{
+
+}
   
 }
