--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,7 @@
 	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 	position: relative;
 }
+
 .projectDiv {
 	display: flex;
 	flex-direction: column;
@@ -47,6 +48,7 @@
 	background-color: #fff;
 	height: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	flex-grow: 100;
@@ -55,6 +57,15 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.pattern5 {
+	position: absolute;
+	height: 7rem;
+	width: 7rem;
+	opacity: 25%;
+	bottom: 2rem;
+	right: 25rem;
+	z-index: 100;
 }
 
 .logo {
@@ -91,7 +102,7 @@
 .socialIconContainers:hover {
 	background: linear-gradient(45deg, #9dbebb, #468189);
 	box-shadow: 0px 15px 20px rgba(73, 73, 73, 0.4);
-	transform: translateY(-7px);
+	transform: translateY(-3px);
 }
 .socialIcons:hover {
 }
