--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -1,19 +1,28 @@
-.bioContainer{
-    width: 80%;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.bioContainer {
+	width: 80%;
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin: 0 0 3rem 0;
 }
-.bio{
-    width: 50%;
+.bio {
+	width: 50%;
+}
+.pattern4 {
+	position: absolute;
+	height: 15rem;
+	width: 15rem;
+	opacity: 20%;
+	top: 30px;
+	left: 30px;
+	z-index: -100;
 }
 
-@media only screen and (max-width: 500px){
-    .bioContainer{
-      flex-direction: column;
-      width: 100%;
-    }
-
-  }
+@media only screen and (max-width: 500px) {
+	.bioContainer {
+		flex-direction: column;
+		width: 100%;
+	}
+}
