--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -5,8 +5,35 @@
 	flex-wrap: wrap;
 	max-width: 800px;
 	margin-top: 3rem;
+	z-index: 100;
 }
-
+.pattern1 {
+	position: absolute;
+	height: 15rem;
+	width: 15rem;
+	opacity: 20%;
+	top: 30px;
+	left: 30px;
+	z-index: -100;
+}
+.pattern2 {
+	position: absolute;
+	height: 10rem;
+	width: 10rem;
+	opacity: 10%;
+	top: 20rem;
+	right: 10rem;
+	z-index: -100;
+}
+.pattern3 {
+	position: absolute;
+	height: 15rem;
+	width: 15rem;
+	opacity: 20%;
+	top: 40rem;
+	right: 35rem;
+	z-index: -100;
+}
 .card {
 	margin: 1rem;
 	flex-basis: 45%;
@@ -17,6 +44,8 @@
 	box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 	transition: color 0.15s ease, border-color 0.15s ease;
+	background-color: white;
+	z-index: 100;
 }
 .cardTop {
 	display: flex;
@@ -61,7 +90,7 @@
 .projectButton:hover {
 	background: linear-gradient(45deg, #9dbebb, #468189);
 	box-shadow: 0px 15px 20px rgba(73, 73, 73, 0.4);
-	transform: translateY(-7px);
+	transform: translateY(-3px);
 }
 .projectButton p {
 	width: fit-content;
