--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -104,10 +104,9 @@
 	box-shadow: 0px 15px 20px rgba(73, 73, 73, 0.4);
 	transform: translateY(-3px);
 }
-.socialIcons:hover {
-}
 
 @media only screen and (max-width: 500px) {
-	.socialIcons {
+	.socialIconContainers {
+		display: none;
 	}
 }
