--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,27 +1,32 @@
 html,
 body {
-  scroll-behavior: smooth;
-  padding: 0;
-  margin: 0;
-  /* overflow-x: hidden; */
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
-}::-webkit-scrollbar {
-  width: 0px;
-  background: transparent; /* make scrollbar transparent */
+	scroll-behavior: smooth;
+	padding: 0;
+	margin: 0;
+	/* overflow-x: hidden; */
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+::-webkit-scrollbar {
+	width: 0px;
+	background: transparent; /* make scrollbar transparent */
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /*
 A24936
 9999A1
 */
+@media only screen and (max-width: 500px) {
+	body {
+		overflow-x: hidden;
+	}
+}
