--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -6,6 +6,8 @@
 	max-width: 800px;
 	margin-top: 3rem;
 	z-index: 100;
+	margin-left: 0;
+	margin-right: 0;
 }
 .pattern1 {
 	position: absolute;
@@ -91,6 +93,8 @@
 	background: linear-gradient(45deg, #9dbebb, #468189);
 	box-shadow: 0px 15px 20px rgba(73, 73, 73, 0.4);
 	transform: translateY(-3px);
+	text-decoration: none;
+	color: white;
 }
 .projectButton p {
 	width: fit-content;
@@ -108,6 +112,6 @@
 	.grid {
 		width: 100%;
 		flex-direction: column;
-		max-width: none;
+		max-width: 100%;
 	}
 }
