--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	min-height: 100vh;
+	max-width: 100%;
 }
 ::-webkit-scrollbar {
 	width: 0px;
